--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Venta de Terneros</title>
-    <link rel="stylesheet" href="../PrimerEntrega/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
         <p id="resultado"></p>
     </div>
 
-    <script src="../PrimerEntrega/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
